1. Custom Page Controll changed on UIPageControl. 2. Approved by designer new fonts added

--- a/INTITA/Info.plist
+++ b/INTITA/Info.plist
@@ -22,9 +22,8 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Roboto-Light.ttf</string>
-		<string>Roboto-Regular.ttf</string>
-		<string>Roboto-Thin.ttf</string>
+		<string>MyriadPro-Light.ttf</string>
+		<string>MyriadPro-Regular.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
