Developer target added. urlPath switching between targets implemented

--- a/INTITA(dev)/Info-dev.plist
+++ b/INTITA(dev)/Info-dev.plist
@@ -51,7 +51,7 @@
 	<key>Network settings</key>
 	<string></string>
 	<key>urlPath</key>
-	<string>https://intita.com/</string>
+	<string>https://qa.intita.com/</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
