--- a/INTITA.xcodeproj/xcshareddata/xcschemes/INTITA(dev).xcscheme
+++ b/INTITA.xcodeproj/xcshareddata/xcschemes/INTITA(dev).xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1240"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -9,14 +9,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "64F78E6F255C5874002C1565"
-               BuildableName = "INTITATests.xctest"
-               BlueprintName = "INTITATests"
+               BlueprintIdentifier = "BAAEC86025D13BD800F2660E"
+               BuildableName = "INTITA(dev).app"
+               BlueprintName = "INTITA(dev)"
                ReferencedContainer = "container:INTITA.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,27 +28,12 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO"
-            testExecutionOrdering = "random">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "64F78E6F255C5874002C1565"
-               BuildableName = "INTITATests.xctest"
-               BlueprintName = "INTITATests"
-               ReferencedContainer = "container:INTITA.xcodeproj">
-            </BuildableReference>
-            <LocationScenarioReference
-               identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
-               referenceType = "1">
-            </LocationScenarioReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -59,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3FF299E6254ADD800087AEC7"
-            BuildableName = "INTITA.app"
-            BlueprintName = "INTITA"
+            BlueprintIdentifier = "BAAEC86025D13BD800F2660E"
+            BuildableName = "INTITA(dev).app"
+            BlueprintName = "INTITA(dev)"
             ReferencedContainer = "container:INTITA.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -72,6 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BAAEC86025D13BD800F2660E"
+            BuildableName = "INTITA(dev).app"
+            BlueprintName = "INTITA(dev)"
+            ReferencedContainer = "container:INTITA.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
