--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     strategy:
         matrix:
-          destination: ['platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max']
+          destination: ['platform=iOS Simulator,OS=latest,name=iPhone 12']
     steps:
       - name: Checkout
         uses: actions/checkout@main
